tests/ui/impl-trait/precise-capturing/dyn-use.stderr
error: expected one of `!`, `(`, `::`, `<`, `where`, or `{`, found keyword `use`
  --> $DIR/dyn-use.rs:1:26
   |
LL | fn dyn() -> &'static dyn use<> { &() }
   |                          ^^^ expected one of `!`, `(`, `::`, `<`, `where`, or `{`

error: aborting due to 1 previous error

